--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -31,7 +31,6 @@
   flex-direction: row;
   height: 40px;
   color: white;
-  border-radius: 4px;
 }
 
 .name {
@@ -40,4 +39,7 @@
 }
 
 .name:hover {
+}
+.selected {
+  border: 2px solid gray;
 }
